# pics2bits

./: .gitignore  CMakeLists.txt  OpenCV_installer.sh  README.md  cmake.sh  demo  p2b_demo
src/: Bitmap.cpp  Demo.cpp  pics2bits.cpp
src/include/: pics2bits.hpp
src/p2b/: Bitmap.cpp  bitmap.cpp  bitmap.hpp  core.cpp  core.hpp  utils.cpp  utils.hpp
src/pics2bits/: Bitmap.hpp  core.hpp  utils.hpp
